Fixed the opera 'double-scrollbar' issue.

--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -19,6 +19,7 @@ body {
 	background: #FFF;
 	text-align: center;
 	margin: 0 0 30px;
+	overflow: hidden;
 	}
 
 img {
